JVMオプション追加、名前空間修正